test/2/type/label-extraneous.err
test/2/type/label-extraneous.ploy:3:14-21: type error: call argument struct has 1 positional field; domain struct has 2. argument type: (Int i:Int)
| main = exit.f(0 i=1)
               ~~~~~~~
test/2/type/label-extraneous.ploy:3:13-14: note: domain type: (Int Int)
| main = exit.f(0 i=1)
              ~
