test/2/type/label-extraneous.ploy
f = fn (Int Int)%Int 0;

main = exit.f(0 i=1)
